--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,23 @@
 body {
     background-color: black;
+    color: white;
+    Font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+}
+
+#show_bg_2 {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.74)), url('../img/imagen_inicio.jpg');
+    width: 100%;
+    height: 880px;
+    background-size: cover;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 50px;
+}
+
+h3.SaltoDePagina {
+    PAGE-BREAK-AFTER: always
 }
 
 .navMenu_container {
@@ -14,7 +32,6 @@ body {
     left: 0;
     right: 0;
     top: 0;
-    font-family: 'Montserrat', sans-serif;
     padding: 0 1%;
     height: 100px;
     backdrop-filter: blur(0px);
@@ -34,7 +51,7 @@ body {
     position: relative;
     padding: 0;
     margin: 0;
-    width: 30%;
+    width: 20%;
     height: 100%;
     display: flex;
     justify-content: space-around;
