--- a/css/styles_index.css
+++ b/css/styles_index.css
@@ -27,6 +27,11 @@ body {
     font-size: 22.5px;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 #show_bg_2 {
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.74)), url('../img/imagen_inicio.jpg');
     width: 100%;
