--- a/view/login.html
+++ b/view/login.html
@@ -20,10 +20,13 @@
         <div class="login-box">
             <h1>Iniciar Sesión</h1>
             <form class="form">
-                <input type="text" placeholder="Enter Username">
-                <input type="password" placeholder="Enter Password">
-                <input type="submit" value="Log In">
+                <input type="text" placeholder="Introduce tu correo">
+                <input type="password" placeholder="Introduce tu contraseña">
+                <input type="submit" value="Entrar">
             </form>
+            <div class="registrarse">
+                <p>Aun no estas suscrito?</p><a href="">Registrarte</a>
+            </div>
         </div>
     </div>
 </body>
