--- a/view/login.html
+++ b/view/login.html
@@ -14,7 +14,7 @@
     <div id='show_bg_2'>
         <nav class="navMenu_navbar">
             <div class="navMenu_logo">
-                <a href="./login.html"><img src="../img/logo.png" width="200px" alt=""></a>
+                <a href="../index.html"><img src="../img/logo.png" width="200px" alt=""></a>
             </div>
         </nav>
         <div class="login-box">
