--- a/css/styles_login.css
+++ b/css/styles_login.css
@@ -2,8 +2,8 @@ body {
     background-color: black;
     color: white;
     margin: 0;
-    width: 100%;
-    Font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+    overflow-y: hidden;
+    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
 }
 
 ::-webkit-scrollbar {
