--- a/view/registrar.html
+++ b/view/registrar.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="shortcut icon" href="img/logo.png"> -->
     <title>LAYFLIX</title>
-    <link rel="stylesheet" href="../css/styles_login.css">
+    <link rel="stylesheet" href="../css/styles_registrar.css">
 </head>
 
 <body>
@@ -18,14 +18,17 @@
             </div>
         </nav>
         <div class="login-box">
-            <h1>Iniciar Sesión</h1>
+            <h1>Registrate</h1>
             <form class="form">
-                <input type="text" placeholder="Introduce tu correo">
-                <input type="password" placeholder="Introduce tu contraseña">
+                <input type="text" placeholder="Nombre">
+                <input type="text" placeholder="Apellido">
+                <input type="text" placeholder="Correo">
+                <input type="text" placeholder="Contraseña">
+                <input type="text" placeholder="Confirmacion de la contraseña">
                 <input type="submit" value="Entrar">
             </form>
             <div class="registrarse">
-                <p>Aun no estas suscrito?</p><a href="">Registrarte</a>
+                <p>Ya tienes cuenta?</p><a href="./login.html">Inicia sesión</a>
             </div>
         </div>
     </div>
