--- a/css/styles_registrar.css
+++ b/css/styles_registrar.css
@@ -3,7 +3,7 @@ body {
     color: white;
     margin: 0;
     overflow-y: hidden;
-    font-family: Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+    font-family: Century Gothic;
 }
 
 ::-webkit-scrollbar {
@@ -65,12 +65,6 @@ body {
 
 /* /* ---------------------------------------- LOGIN ---------------------------------------- */
 
-@media only screen and (max-width: 600px) {
-    .login-box {
-        background-color: #ff0000;
-    }
-}
-
 .registrarse p {
     padding: 0% 2% 0% 0%;
 }
@@ -92,15 +86,15 @@ body {
 
 .login-box {
     width: 430px;
-    height: 490px;
+    height: 620px;
     color: #ffffff;
-    top: 55%;
+    top: 50%;
     left: 50%;
     position: absolute;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
-    padding: 100px 60px;
-    background-color: rgba(0, 0, 0, 0.51)
+    padding: 60px 60px;
+    background-color: rgba(0, 0, 0, 0.600)
 }
 
 .login-box .avatar {
