--- a/view/login.html
+++ b/view/login.html
@@ -25,7 +25,7 @@
                 <input type="submit" value="Entrar">
             </form>
             <div class="registrarse">
-                <p>Aun no estas suscrito?</p><a href="">Registrarte</a>
+                <p>Aun no estas suscrito?</p><a href="./registrar.html">Registrarte</a>
             </div>
         </div>
     </div>
