--- a/css/styles_subscribe.css
+++ b/css/styles_subscribe.css
@@ -2,19 +2,8 @@ body {
     background-color: black;
     color: white;
     margin: 0;
-    font-family: Century Gothic;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
 }
-
-
-/* body::-webkit-scrollbar {
-    width: 10px;
-    background-color: black;
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: rgb(19, 19, 19);
-    border-radius: 10px;
-} */
 
 ::-webkit-scrollbar {
     display: none;
@@ -52,7 +41,7 @@ a {
 /* ---------------------------------------- NAVBAR ---------------------------------------- */
 
 #show_bg_2 {
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.192)), url('../img/subscribe/background.jpg');
+    /* background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.192)), url('../img/subscribe/background.jpg'); */
     width: 100%;
     height: 820px;
     background-size: cover;
@@ -60,6 +49,15 @@ a {
     align-items: center;
     justify-content: center;
     font-size: 50px;
+}
+
+#myVideo {
+    position: absolute;
+    z-index: -9999;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .btn-login {
