--- a/css/styles_subscribe.css
+++ b/css/styles_subscribe.css
@@ -26,16 +26,72 @@ a {
     margin-right: 44%;
 }
 
-.desc-film h3 {
+
+/* .desc-film h3 {
     font-size: 60px;
-}
+} */
 
 .desc-film p {
     font-size: 20px;
 }
 
+.contenido {
+    padding: 2.5% 2.5% 10% 2.5%;
+}
+
 
 /* ---------------------------------------- EFECTO HOVER PARA IMAGENES ---------------------------------------- */
+
+.search {
+    width: 500px;
+    height: 35px;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    border: 1px solid #fff;
+}
+
+.search input {
+    width: 370px;
+    padding: 10px 5px;
+    float: left;
+    color: #ccc;
+    border: 0;
+    background: transparent;
+    border-radius: 3px 0 0 3px;
+}
+
+.search input:focus {
+    outline: 0;
+    background: transparent;
+}
+
+.search button {
+    position: relative;
+    float: right;
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    height: 35px;
+    width: 120px;
+    color: #fff;
+    background: transparent;
+    border-left: 1px solid #fff;
+    border-radius: 0 3px 3px 0;
+}
+
+.search button:hover {
+    background: #fff;
+    color: #444;
+}
+
+.search button:active {
+    box-shadow: 0px 0px 12px 0px #e1e1e1;
+}
+
+.search button:focus {
+    outline: 0;
+}
 
 
 /* ---------------------------------------- NAVBAR ---------------------------------------- */
@@ -43,7 +99,7 @@ a {
 #show_bg_2 {
     /* background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.192)), url('../img/subscribe/background.jpg'); */
     width: 100%;
-    height: 820px;
+    height: 925px;
     background-size: cover;
     color: white;
     align-items: center;
