--- a/css/styles_subscribe.css
+++ b/css/styles_subscribe.css
@@ -40,64 +40,58 @@ a {
 }
 
 
-/* ---------------------------------------- EFECTO HOVER PARA IMAGENES ---------------------------------------- */
+/* ---------------------------------------- SEARCH BOX ---------------------------------------- */
 
-.search {
-    width: 500px;
-    height: 35px;
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.2);
-    border-radius: 3px;
-    border: 1px solid #fff;
+.search__container {
+    margin-top: 10%;
 }
 
-.search input {
-    width: 370px;
-    padding: 10px 5px;
-    float: left;
-    color: #ccc;
-    border: 0;
-    background: transparent;
-    border-radius: 3px 0 0 3px;
+.search__title {
+    font-size: 22px;
+    font-weight: 900;
+    text-align: center;
+    color: #ff8b88;
 }
 
-.search input:focus {
+.search__input {
+    width: 30%;
+    padding: 12px 24px;
+    background-color: transparent;
+    transition: transform 250ms ease-in-out;
+    font-size: 14px;
+    line-height: 18px;
+    color: white;
+    background-color: transparent;
+    border-radius: 50px;
+    border: 1px solid white;
+    transition: all 250ms ease-in-out;
+    backface-visibility: hidden;
+    transform-style: preserve-3d;
+}
+
+.search__input::placeholder {
+    color: white;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+}
+
+
+/* EFECTO ANIMACIÓN */
+
+.search__input:focus {
+    padding: 12px 0;
     outline: 0;
-    background: transparent;
-}
-
-.search button {
-    position: relative;
-    float: right;
-    border: 0;
-    padding: 0;
-    cursor: pointer;
-    height: 35px;
-    width: 120px;
-    color: #fff;
-    background: transparent;
-    border-left: 1px solid #fff;
-    border-radius: 0 3px 3px 0;
-}
-
-.search button:hover {
-    background: #fff;
-    color: #444;
-}
-
-.search button:active {
-    box-shadow: 0px 0px 12px 0px #e1e1e1;
-}
-
-.search button:focus {
-    outline: 0;
+    border: 1px solid transparent;
+    border-bottom: 1px solid white;
+    border-radius: 0;
+    background-position: 100% center;
 }
 
 
 /* ---------------------------------------- NAVBAR ---------------------------------------- */
 
-#show_bg_2 {
-    /* background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.192)), url('../img/subscribe/background.jpg'); */
+
+/* #show_bg_2 {
     width: 100%;
     height: 925px;
     background-size: cover;
@@ -105,7 +99,7 @@ a {
     align-items: center;
     justify-content: center;
     font-size: 50px;
-}
+} */
 
 #myVideo {
     position: absolute;
