--- a/css/styles_subscribe.css
+++ b/css/styles_subscribe.css
@@ -203,3 +203,50 @@ main {
 .netflix-row--item:hover~.netflix-row--item {
     transform: translate3d(125px, 0, 0);
 }
+
+
+/* HOVER IMAGE */
+
+.container {
+    position: relative;
+    width: 100%;
+}
+
+.container a {
+    font-size: 30px;
+}
+
+.image {
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.container:hover .image {
+    opacity: 0.3;
+}
+
+.container:hover .middle {
+    opacity: 1;
+}
+
+.text {
+    background-color: transparent;
+    color: white;
+    font-size: 16px;
+    padding: 16px 32px;
+}
