--- a/css/styles_subscribe.css
+++ b/css/styles_subscribe.css
@@ -205,7 +205,7 @@ main {
 }
 
 
-/* HOVER IMAGE */
+/* ---------------------------------------- HOVER IMAGENES LIKE ---------------------------------------- */
 
 .container {
     position: relative;
