--- a/css/styles_subscribe.css
+++ b/css/styles_subscribe.css
@@ -32,12 +32,6 @@ a {
     z-index: -1;
 }
 
-main {
-    background-color: black;
-    font-size: 2rem;
-    position: relative;
-}
-
 @media (max-width: 1000px) {
     #background-video {
         display: none;
@@ -115,6 +109,7 @@ main {
 
 .contenido {
     padding: 1.5% 2.5% 10% 2.5%;
+    background-color: black;
 }
 
 .contenido h4 {
@@ -205,18 +200,67 @@ main {
 }
 
 
+/* ---------------------------------------- FOOTER ---------------------------------------- */
+
+#footer {
+    position: relative;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: #0e0e0e;
+}
+
+.footer-logo {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.footer-logo>a>img {
+    max-height: 80px;
+}
+
+.footer-follow {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.footer-follow li {
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 13px;
+}
+
+.footer-follow li a {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border-radius: 3px;
+    background-color: red;
+    color: #FFF;
+}
+
+.footer-copyright p {
+    text-align: center;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin: 0;
+    color: white;
+}
+
+
 /* ---------------------------------------- HOVER IMAGENES LIKE ---------------------------------------- */
 
-.container {
+.container-catalogo {
     position: relative;
     width: 100%;
 }
 
-.container a {
+.container-catalogo a {
     font-size: 30px;
 }
 
-.container p {
+.container-catalogo p {
     font-size: 12.5px;
     text-align: center;
 }
@@ -241,11 +285,11 @@ main {
     text-align: center;
 }
 
-.container:hover .image {
+.container-catalogo:hover .image {
     opacity: 0.3;
 }
 
-.container:hover .middle {
+.container-catalogo:hover .middle {
     opacity: 1;
 }
 
