--- a/css/styles_panel_admin.css
+++ b/css/styles_panel_admin.css
@@ -1,4 +1,4 @@
-body {
+html {
     background-color: black;
     margin: 0;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
